--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_WeatherVR/Maps/CitiesSelector.CitiesSelector
-EditorStartupMap=/Game/_WeatherVR/Maps/CitiesSelector.CitiesSelector
+GameDefaultMap=/Game/_WeatherVR/Maps/Main.Main
+EditorStartupMap=/Game/_WeatherVR/Maps/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
